@@ -441,6 +441,7 @@ SET(ForwardingNetworkHeaders_NAME )
 INCLUDE_IF_EXISTS(${WEBKIT2_DIR}/CMakeLists${PORT}.txt)
 
 ADD_DEFINITIONS(-DBUILDING_WEBKIT)
+ADD_DEFINITIONS(-DWTF_USE_JSC=1)
 INCLUDE_DIRECTORIES(${WebKit2_INCLUDE_DIRECTORIES})
 ADD_LIBRARY(${WebKit2_LIBRARY_NAME} ${WebKit2_LIBRARY_TYPE} ${WebKit2_SOURCES})
 
